--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.12",
     "@primevue/themes": "^4.1.1",
-    "primevue": "^4.1.1"
+    "primeicons": "^7.0.0",
+    "primevue": "^4.1.1",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
@@ -28,6 +29,8 @@
     "eslint-plugin-vue": "^9.29.0",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
+    "sass": "^1.80.5",
+    "sass-loader": "^16.0.2",
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.3",
