--- a/.github/workflows/vue_build.yml
+++ b/.github/workflows/vue_build.yml
@@ -5,11 +5,12 @@ on:
     branches:
       - master
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
-    permissions:
-      actions: write
-      contents: read
     runs-on: ubuntu-latest
 
     steps:
