--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --port 4000",
     "build": "vite build",
     "preview": "vite preview",
+    "build_preview": "vite build && vite preview",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
