--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@primevue/themes": "^4.1.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
+    "vite-plugin-dynamic-import": "^1.6.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
